@@ -5,11 +5,15 @@ uk.co.anthonycampbell.grails.plugins.picasa.Album.details.legend=Album Details
 uk.co.anthonycampbell.grails.plugins.picasa.Album.rss.description=RSS feed for the photo album listing
 uk.co.anthonycampbell.grails.plugins.picasa.Photo.legend=Photo Listing
 uk.co.anthonycampbell.grails.plugins.picasa.Photo.details.legend=Photo Details
+uk.co.anthonycampbell.grails.plugins.picasa.Photo.rss.description=RSS feed for the photo listing
 uk.co.anthonycampbell.grails.plugins.picasa.Tag.legend=Tag Listing
 uk.co.anthonycampbell.grails.plugins.picasa.Tag.details.legend=Tag: {0}
 uk.co.anthonycampbell.grails.plugins.picasa.Tag.rss.description=RSS feed for the tag listing
 uk.co.anthonycampbell.grails.plugins.picasa.Comment.legend=Photo Comments
 uk.co.anthonycampbell.grails.plugins.picasa.Comment.details.legend=Comment Listing
+uk.co.anthonycampbell.grails.plugins.picasa.Comment.rss.description=RSS feed for the photo comment listing
+uk.co.anthonycampbell.grails.plugins.picasa.Comment.rss.title=New comment from {0}
+uk.co.anthonycampbell.grails.plugins.picasa.Comment.rss.title.simple=New comment
 
 # Generic album error messages
 uk.co.anthonycampbell.grails.plugins.picasa.Album.list.not.available=The photo album listing is currently not available. Please try again later.
