@@ -9,7 +9,11 @@ Release notes 0.5.0 (TBA)
 - Controller "elvis" clean up.
 - Domain class comment clean up.
 - Introduction of most recent comment listing.
-- Footer output update. 
+- Footer output update.
+- URL mappings update to provide feeds for comment listing.
+- README update to detail new URL mappings. 
+- Small CSS tweaks.
+- Removal of RCU from controllers.
 
 Release notes 0.4.5 (1st June 2010)
 - Further PicasaService code coverage. 
